--- a/Kontakt.html
+++ b/Kontakt.html
@@ -130,7 +130,7 @@
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" role="navigation" data-responsive-from="MD">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-hamburger-link u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" tabindex="-1" aria-label="Open menu" aria-controls="80e5">
+            <a style="margin-right: 20px;" class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-hamburger-link u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" tabindex="-1" aria-label="Open menu" aria-controls="80e5">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
@@ -188,7 +188,7 @@
                       </div>
                       <div class="u-form-group u-form-message">
                         <label for="message-c817" class="u-label">Nachricht</label>
-                        <textarea placeholder="​" rows="4" cols="50" id="message-c817" name="message" class="u-border-none u-input u-input-rectangle u-text-body-color" required=""></textarea>
+                        <textarea placeholder="Deine Nachricht​" rows="4" cols="50" id="message-c817" name="message" class="u-border-none u-input u-input-rectangle u-text-body-color" required=""></textarea>
                       </div>
                       <div class="u-align-left u-form-group u-form-submit">
                         <a href="#" class="u-btn u-btn-round u-btn-submit u-button-style u-custom-color-2 u-radius u-btn-1">Einreichen</a>
